--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">PWr Nawigacja</string>
     <string name="title_activity_main">PWr Nawigacja</string>
     <string name="access_token" translatable="false">pk.eyJ1IjoiYm9nZGFuMzMiLCJhIjoiY2pmc3J3NGRlMG5pODMzcW5hOWYxY3UwMSJ9.mwaBc5Ga8gPnJobIbd9mXw</string>
+    <string name="NOT_SET_ANY_POINT">Wybierz punkt startowy i docelowy</string>
 </resources>
